2005-09-01  Benjamin Kosnik  <bkoz@redhat.com>

        * testsuite/lib/libstdc++.exp (check_v3_target_cxa_atexit): New.
        * testsuite/lib/dg-options.exp (dg-require-cxa-atexit): New.
        * testsuite/ext/mt_allocator/deallocate_local-6.cc: New.
        * testsuite/ext/mt_allocator/deallocate_local-8.cc: New.
        * testsuite/ext/mt_allocator/deallocate_local_thread-5.cc: New.
        * testsuite/ext/mt_allocator/deallocate_local_thread-7.cc: New.
        * docs/html/ext/mt_allocator.html: Add link to examples.
        * testsuite/testsuite_allocator.h: Tweak.
        * testsuite/ext/mt_allocator/deallocate_global-2.cc: Same.
        * testsuite/ext/mt_allocator/deallocate_global-4.cc: Same.
        * testsuite/ext/mt_allocator/deallocate_global_thread-1.cc: Same.
        * testsuite/ext/mt_allocator/deallocate_global_thread-3.cc: Same.
        * testsuite/ext/mt_allocator/deallocate_local-2.cc: Same.
        * testsuite/ext/mt_allocator/deallocate_local-4.cc: Same.
        * testsuite/ext/mt_allocator/deallocate_local_thread-1.cc: Same.
        * testsuite/ext/mt_allocator/deallocate_local_thread-3.cc: Same.
        * testsuite/ext/new_allocator/deallocate_global.cc: Same.
        * testsuite/ext/new_allocator/deallocate_local.cc: Same.

2005-08-31  Paolo Carlini  <pcarlini@suse.de>
	    Kaspar Fischer <fischerk@inf.ethz.ch> 

	PR libstdc++/23632
	* include/bits/stl_bvector.h (_Bit_iterator::operator[],
	_Bit_const_iterator::operator[]): Const-ify.
	* testsuite/23_containers/vector/bool/23632.cc: New.

2005-08-30  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/23578 (cont)
	* include/bits/stl_bvector.h (class vector<bool>): Add
	a dummy data() to avoid problems in debug-mode.

2005-08-30  Paolo Carlini  <pcarlini@suse.de>

	* testsuite/ext/hash_map/23528.cc: New.

2005-08-29  Paolo Carlini  <pcarlini@suse.de>

	* include/bits/stl_map.h (class map): ... and a missing @a.

2005-08-29  Paolo Carlini  <pcarlini@suse.de>
