@@ -1,4 +1,10 @@
 2005-09-01  Benjamin Kosnik  <bkoz@redhat.com>
+	     Paolo Carlini  <pcarlini@suse.de>
+	
+	* testsuite/lib/libstdc++.exp (check_v3_target_cxa_atexit): Fix
+	comment.
+
+2005-09-01  Benjamin Kosnik  <bkoz@redhat.com>
 
         * testsuite/lib/libstdc++.exp (check_v3_target_cxa_atexit): New.
         * testsuite/lib/dg-options.exp (dg-require-cxa-atexit): New.
